Fix alignment issues with speakers & sponsors - set vertical align to top of all elements.

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -36,6 +36,7 @@
     padding: 0;
     width: 120px;
     text-align: center;
+    vertical-align: top;
 
     @include breakpoint($tablet-small) {
       width: 160px;
